# fastapi-vite

./: README.md  main.py  pyproject.toml  vite.config.js
