[tool.poetry]
name = "fastapi-vite"
version = "0.1.0"
description = ""
authors = ["Justin N. Pitera <justinpitera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
httptools = "^0.6.1"
h2 = "^4.1.0"
hypercorn = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
